--- a/Scheduler.Mailer/Scheduler.Mailer.csproj
+++ b/Scheduler.Mailer/Scheduler.Mailer.csproj
@@ -72,7 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IMailService.cs" />
+    <Compile Include="IMailService.cs" />
     <Compile Include="MailerModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MailService.cs" />
