--- a/Scheduler.Data/Scheduler.Data.csproj
+++ b/Scheduler.Data/Scheduler.Data.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Compile Include="DataModule.cs" />
     <Compile Include="DataService.cs" />
-    <Compile Include="Interfaces\IDataService.cs" />
+    <Compile Include="IDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
