--- a/Scheduler/App.config
+++ b/Scheduler/App.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <appSettings>
+    <add key="hostingUrl" value="http://localhost:8000" />
+    <add key="messagesFilePath" value="Data/data.csv" />
+  </appSettings>
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <system.net>
     <mailSettings>
       <smtp from="***@gmail.com">
