--- a/Scheduler/packages.config
+++ b/Scheduler/packages.config
@@ -15,6 +15,7 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.0.0" targetFramework="net461" />
   <package id="Serilog" version="2.5.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.ColoredConsole" version="3.0.1" targetFramework="net461" />
   <package id="Serilog.Sinks.Console" version="3.0.1" targetFramework="net461" />
   <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="3.0.0" targetFramework="net461" />
