--- a/Scheduler/packages.config
+++ b/Scheduler/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Akka" version="1.3.2" targetFramework="net461" />
+  <package id="Akka.DI.Core" version="1.3.0" targetFramework="net461" />
   <package id="Autofac" version="4.6.2" targetFramework="net461" />
   <package id="Hangfire" version="1.6.17" targetFramework="net461" />
   <package id="Hangfire.Autofac" version="2.3.1" targetFramework="net461" />
@@ -14,12 +15,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.0.0" targetFramework="net461" />
-  <package id="Serilog" version="2.5.0" targetFramework="net461" />
-  <package id="Serilog.Sinks.ColoredConsole" version="3.0.1" targetFramework="net461" />
-  <package id="Serilog.Sinks.Console" version="3.0.1" targetFramework="net461" />
-  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net461" />
-  <package id="Serilog.Sinks.Literate" version="3.0.0" targetFramework="net461" />
-  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net461" />
   <package id="Topshelf" version="4.0.3" targetFramework="net461" />
   <package id="Topshelf.Autofac" version="3.1.1" targetFramework="net461" />
